--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -321,7 +321,7 @@ Do not use your own name in your email; use “Li Ming” instead.
 ### Example
 
 Dear John,<br>
-&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-Romance of the Three Kingdoms. Now I am planning to direct a short play revised from it<br>
+&emsp;&emsp;As you know, I am extremely keen on the ancient Chinese novel-Romance of the Three Kingdoms. Now I am planning to direct a short play revised from it.<br>
 &emsp;&emsp;Romance of the Three Kingdoms, as one of the Four Great Classical Novels in China, mainly depicts the political and military struggles during the Three Kingdoms Period and reveals the turbulent society. It successfully portrays images of classic characters, such as Zhuge Liang, Liu Bei, Guan Yu, Cao Cao, and so on.<br>
 &emsp;&emsp;Since you excel in acting, I cordially invite you to participate in the play and act as the leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking forward to your reply.<br>
 
