review: Unit 11-1, Unit 17-2

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -44,12 +44,8 @@ Do not sign your own name at the end of the letter. Use “Zhang Wei” instead.
 ### Example
 
 Dear Bob,<br>
-&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to
-you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left a deep
-impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
-&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you will be warmly
-welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places
-you would like to visit.<br>
+&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm **reception** in the **cultural** exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful **memories** in my life.<br>
+&emsp;&emsp;I remember you **mentioned** wanting to **travel** in China. Well, if you come to China, you will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br> 
 &emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
@@ -80,15 +76,9 @@ Some international students are coming to your university, Write them an email i
 ### Example
 
 Dear friends,<br>
-&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend
-our heartfelt welcome to all the overseas students who will study in our university.<br>
-&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life in
-this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes,
-abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all
-those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still
-provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br>
-&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be
-worthwhile and enhance your whole life. Hope you like it here.<br>
+&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend our heartfelt welcome to all the overseas students who will study in our university.<br> 
+&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life in this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes, abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br> 
+&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be worthwhile and enhance your whole life. Hope you like it here.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
@@ -119,13 +109,9 @@ Do not write the address.
 ### Example
 
 Dear Sir or Madam,<br>
-&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for a short
-period of time, I found it has some problems.<br>
-&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my
-charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is
-nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
-&emsp;&emsp;Therefore, I would like either to change to another model that works better or a full refund. Your help is
-greatly appreciated.<br>
+&emsp;&emsp;I bought an electronic dictionary from your online store on January 1st, but after using it for a short period of time, I found it has some problems.<br>
+&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br> 
+&emsp;&emsp;Therefore, I would like either to change to another model that works better or a full refund. Your help is greatly appreciated.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Zhang Wei</p>
 
@@ -153,13 +139,8 @@ the upcoming English speech contest.
 ### Example
 
 Dear Professor Smith,<br>
-&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I am writing to invite you to serve as one of
-our judges.<br>
-&emsp;&emsp;As a key event of the "Foreign Culture Festival", this school-wide contest is to be held in the Students'
-Auditorium on May 12 (next Sunday). And we believe that you can provide some valuable and enlightening comments for our
-competitors as both a native English speaker and a knowledgeable professor. Specifically, the event will start at around
-7:00 p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and
-competitor.<br>
+&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I am writing to invite you to serve as one of our judges.<br>
+&emsp;&emsp;As a key event of the "Foreign Culture Festival", this school-wide contest is to be held in the Students' Auditorium on May 12 (next Sunday). And we believe that you can provide some valuable and enlightening comments for our competitors as both a native English speaker and a knowledgeable professor. Specifically, the event will start at around 7:00 p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
 &emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
