--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -61,18 +61,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is
-reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim
-of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other
-goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br>
-&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide
-range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in
-different times. In the second place, college students, who have to juggle academic work, romantic relationships and a
-busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce
-stress.<br>
-&emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and
-ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming
-decade.
+&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br> 
+&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the second place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br> 
+&emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming decade.
 
 ### 译文
 
@@ -93,18 +84,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart above clearly reveals the factors of consumers' concern on choosing restaurants in a certain
-city in 2017. Among all the five categories, the percentages of feature, service and environment are the highest,
-accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up
-merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
-&emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In
-the first place, with the prosperity of China's economy and the increase of people's income in recent decades, a large
-number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a
-bid to develop interpersonal relationship and enjoy comfortable life, consumers in mounting numbers prefer service and
-environment to other factors.<br>
-&emsp;&emsp;With due consideration of all these contributors, we may predict that with the speedy development of our
-society, customers in expanding numbers will attach utmost significance to the feature, service as well as environment
-of a restaurant.
+&emsp;&emsp;The pie chart above clearly reveals the factors of consumers' concern on choosing restaurants in a certain city in 2017. Among all the five categories, the percentages of feature, service and environment are the highest, accounting for 36.3%, 26.8% and 23.8% respectively. On the contrary, the statistics of price and other factors take up merely 8.4% and 4.7% respectively, the lowest among the five groups.<br>
+&emsp;&emsp;Several primary causes that contribute to the above-mentioned phenomenon could be summarized as follows. In the first place, with the prosperity of China's economy and the increase of people's income in recent decades, a large number of people are paying more attention to the feature of a restaurant instead of price. In the second place, in a bid to develop interpersonal relationship and enjoy comfortable life, consumers in mounting numbers prefer service and environment to other factors.<br>
+&emsp;&emsp;With due consideration of all these contributors, we may predict that with the speedy development of our society, customers in expanding numbers will attach utmost significance to the feature, service as well as environment of a restaurant.
 
 ### 译文
 
@@ -150,17 +132,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;As can be seen from the bar chart above, the express delivery business in China has increased considerably
-between 2018 and 2020. During this three-year period, the total number of express delivery parcels jumped markedly from
-51 billion to 83 billion. In the meantime, the number of express delivery parcels in rural areas rose dramatically from
-12 billion to 30 billion.<br>
-&emsp;&emsp;Why is the express delivery business booming nowadays? Several factors may contribute to this phenomenon. To
-start with, the popularity of electronic commerce and online shopping has laid the foundation for the development of the
-express delivery business. Moreover, as the express delivery business is becoming increasingly mature and relevant laws
-and regulations are improved, people who were at first skeptical about express delivery service now become convinced
-that it is safe and reliable.<br>
-&emsp;&emsp;The boom of the express delivery business undoubtedly contributes to the prosperity of China's economy.
-Accordingly, let us get prepared to embrace this irreversible trend.
+&emsp;&emsp;As can be seen from the bar chart above, the express delivery business in China has increased considerably between 2018 and 2020. During this three-year period, the total number of express delivery parcels jumped markedly from 51 billion to 83 billion. In the meantime, the number of express delivery parcels in rural areas rose dramatically from 12 billion to 30 billion.<br>
+&emsp;&emsp;Why is the express delivery business booming nowadays? Several factors may contribute to this phenomenon. To start with, the popularity of electronic commerce and online shopping has laid the foundation for the development of the express delivery business. Moreover, as the express delivery business is becoming increasingly mature and relevant laws and regulations are improved, people who were at first skeptical about express delivery service now become convinced that it is safe and reliable.<br>
+&emsp;&emsp;The boom of the express delivery business undoubtedly contributes to the prosperity of China's economy. Accordingly, let us get prepared to embrace this irreversible trend.
 
 ### 译文
 
@@ -206,18 +180,9 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The picture vividly depicts a lovely American girl in traditional Chinese costume with a sweet smile on her
-face. She wears ribbons, necklaces and other accessories that are characteristic of the clothes of a certain Chinese
-minority group. Undoubtedly, the costume has added oriental charm to her beautiful features.<br>
-&emsp;&emsp;The fact that people from different countries are attracted to the mysterious Chinese culture indicates that
-to some extent a culture can be accepted, respected, appreciated and shared internationally. In other words, a nation's
-unique culture can become international through worldwide economic and cultural exchanges. Since the trend of
-globalization has become irresistible, increasingly frequent cultural exchanges can effectively improve mutual
-understanding and friendship between countries.<br>
-&emsp;&emsp;It is my view that national culture should be preserved and cherished as a priceless spiritual treasure.
-Nevertheless, when we are confronted with a different culture, we should be sensible enough to absorb its virtues and to
-resist its dark side. Only in this way can we promote culture development positively and make our world
-multidimensional, colorful and vigorous.
+&emsp;&emsp;The picture vividly depicts a lovely American girl in traditional Chinese costume with a sweet smile on her face. She wears ribbons, necklaces and other accessories that are characteristic of the clothes of a certain Chinese minority group. Undoubtedly, the costume has added oriental charm to her beautiful features.<br>
+&emsp;&emsp;The fact that people from different countries are attracted to the mysterious Chinese culture indicates that to some extent a culture can be accepted, respected, appreciated and shared internationally. In other words, a nation's unique culture can become international through worldwide economic and cultural exchanges. Since the trend of globalization has become irresistible, increasingly frequent cultural exchanges can effectively improve mutual understanding and friendship between countries.<br>
+&emsp;&emsp;It is my view that national culture should be preserved and cherished as a priceless spiritual treasure. Nevertheless, when we are confronted with a different culture, we should be sensible enough to absorb its virtues and to resist its dark side. Only in this way can we promote culture development positively and make our world multidimensional, colorful and vigorous.
 
 ### 译文
 
@@ -262,8 +227,7 @@ confronted with, we should never overestimate the difficulties or underestimate 
 
 ### Directions
 
-&emsp;&emsp;Read the following excerpt from an article and write an essay. In your essay, you should explain whether or
-to what extent you agree with the author. Support your argument with reasons and relevant examples.
+&emsp;&emsp;Read the following excerpt from an article and write an essay. In your essay, you should explain whether or to what extent you agree with the author. Support your argument with reasons and relevant examples.
 &emsp;&emsp;Write your answer in about 150 words on the ANSWER SHEET.
 
 &emsp;&emsp;Studies in the U.S. and the U.K. consistently show that children have lost the right to wander. This is why
@@ -275,18 +239,9 @@ screens?
 
 ### Example
 
-&emsp;&emsp;Nowadays, a large number of teenagers have lost the right to play outside and instead indulge in computer
-use. In this excerpt, the author maintains that since parents have robbed their children of the opportunity to wander
-around, a good many youngsters use the computer to socialize with their friends. I agree with the writer's idea.<br>
-&emsp;&emsp;The primary factors that account for the aforementioned phenomenon can be summarized as follows. On the one
-hand, school time can be a period of constant pressure for students. Stressors like upcoming examinations and endless
-assignments take up most of their life, leaving them less and less time for free play. On the other hand, in order not
-to let their children lose at the so-called starting line, many parents force their children to attend various cram
-schools and interest classes, depriving them of the right to play with their peers. Therefore, many teenagers indulge in
-the fictitious world and feel reluctant to approach others.<br>
-&emsp;&emsp;Hence, parents should be sensible enough to give their children more freedom to play with their friends and
-classmates. Meanwhile, it is necessary for teenagers to use technology in a reasonable way and refrain from
-overindulgence.
+&emsp;&emsp;Nowadays, a large number of teenagers have lost the right to play outside and instead indulge in computer use. In this excerpt, the author maintains that since parents have robbed their children of the opportunity to wander around, a good many youngsters use the computer to socialize with their friends. I agree with the writer's idea.<br>
+&emsp;&emsp;The primary factors that account for the aforementioned phenomenon can be summarized as follows. On the one hand, school time can be a period of constant pressure for students. Stressors like upcoming examinations and endless assignments take up most of their life, leaving them less and less time for free play. On the other hand, in order not to let their children lose at the so-called starting line, many parents force their children to attend various cram schools and interest classes, depriving them of the right to play with their peers. Therefore, many teenagers indulge in the fictitious world and feel reluctant to approach others.<br>
+&emsp;&emsp;Hence, parents should be sensible enough to give their children more freedom to play with their friends and classmates. Meanwhile, it is necessary for teenagers to use technology in a reasonable way and refrain from overindulgence.
 
 ### 译文
 
