feat: add Unit1-1 Unit7-2 Unit6-2

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -39,7 +39,7 @@ Write your essay on ANSWER SHEET 2.
 ### Example
 
 &emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.<br>
-&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.<br>
+&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the lowest level of job satisfaction. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.<br>
 &emsp;&emsp;In view of the above reasoning, I am convinced that it is difficult for everyone to be content with their jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more attention to the welfare of their staff.<br>
 
 ### 译文
