feat: add Unit2-1

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -61,7 +61,7 @@ In this section, you are asked to write an essay based on the following chart. I
 
 ### Example
 
-&emsp;&emsp;The pie chart clearly illustrates the purposes of touring for students in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br> 
+&emsp;&emsp;The pie chart clearly illustrates the purposes of students travelling in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br> 
 &emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the second place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br> 
 &emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming decade.
 
