--- a/english/word/low-frequency/017-024.md
+++ b/english/word/low-frequency/017-024.md
@@ -95,7 +95,7 @@
 - bidder
     - n. 投标者
 - bitter
-    - n. 投标者
+    - adj. 苦的
     - Bad times can make you bitter or better.
 - directive
     - adj. 指示的
