feat: add error of write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -236,7 +236,7 @@ Do not use your own name in your email; use “Li Ming" instead
 
 Dear Paul,<br>
 &emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to present an oral report on an ancient Chinese scientist, Bi Sheng is an ideal candidate.<br>
-&emsp;&emsp;In the middle of the 11 century during the Song Dynasty, Bi Sheng invented the movable type printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region during the Yuan Dynasty and then to Africa and Europe. Printing provided favorable conditions for the rapid development of European science after the long medieval night and the emergence of the Renaissance.<br>
+&emsp;&emsp;In the middle of the 11th century during the Song Dynasty, Bi Sheng invented the movable type printing technique. He mainly used clay type, which saved much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was spread to the Arabic region during the Yuan Dynasty and then to Africa and Europe. Printing provided favorable conditions for the rapid development of European science after the long medieval night and the emergence of the Renaissance.<br>
 &emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
 
 <p align="right">Yours,</p>
