--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -13,7 +13,7 @@ In this section, you are asked to write an essay based on the following chart. I
 
 &emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries remained steady at just under 1 billion.<br>
 &emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid increase in economic development happening in developing countries, the telecommunication industry in those countries has expanded greatly to meet the demand for globalization. As a result, the user base of mobile phones, which can narrow the distance between people and link the whole world together, grew at an astonishing speed. On the other hand, the extremely advanced economy of developed countries means less potential in many aspects and their demand for further enlargement tends to saturate.<br>
-&emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more attention to the market in developing countries.<br>
+&emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed countries, and the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more attention to the market in developing countries.<br>
 
 ### 译文
 
@@ -38,7 +38,7 @@ Write your essay on ANSWER SHEET 2.
 
 ### Example
 
-&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.<br>
+&emsp;&emsp;The table clearly reflects statistics on staff job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.<br>
 &emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the lowest level of job satisfaction. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.<br>
 &emsp;&emsp;In view of the above reasoning, I am convinced that it is difficult for everyone to be content with their jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more attention to the welfare of their staff.<br>
 
@@ -62,7 +62,7 @@ In this section, you are asked to write an essay based on the following chart. I
 ### Example
 
 &emsp;&emsp;The pie chart clearly illustrates the purposes of students travelling in a certain university. As is reflected by the diagram, 37 percent of college students travel in order to appreciate the scenery. Next comes the aim of relieving pressure, accounting for 33 percent. By contrast, the percentages of students travelling aiming at other goals, making friends and cultivating independence account for 15%, 9% and 6% respectively.<br> 
-&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. In travelling, we may experience the bitterness and joy of people on different lands and in different times. In the second place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br> 
+&emsp;&emsp;Several primary factors could contribute to this phenomenon. In the first place, travel can offer us a wide range of experiences. While travelling, we may experience the bitterness and joy of people on different lands and in different times. In the second place, college students, who have to juggle academic work, romantic relationships and a busy social calendar, are particularly susceptible to pressure. By touring, they can successfully manage and reduce stress.<br> 
 &emsp;&emsp;Taking all these factors into consideration, we may predict that with the quickening pace and ever-increasing pressure of campus life, the number of university students touring will keep growing in the forthcoming decade.
 
 ### 译文
