feat: update Unit 20-2, Unit 18-2, Unit 21-1, Unit 19-1

--- a/english/word/low-frequency/001-008.md
+++ b/english/word/low-frequency/001-008.md
@@ -178,7 +178,8 @@
     - n. 叙事
 - mightily
     - adv. 非常
-    - He had given a mightly imoressive performance.
+    - He had given a **mightily** imoressive performance.
+    - That framework has contributed **mightily** to our broken immigration system.
 - ironically
     - adv. 讽刺地
     - ironic n. 讽刺
