--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -369,7 +369,7 @@
         - reduce v. 减少
         - introduce into 引入
             - The gardens of the homeless <ins>introduce form into</ins> an urban environment.无家可归者的花园为城市环境引入了形式
-- motorist
+- motorist [ˈmoʊtərɪst]
     - n. 驾车者，开车的人
     - mot- 动
         - motor n. 发动机
