review: Unit 21-1, Unit 21-2, Unit 17-1, Unit 18-1

--- a/english/word/low-frequency/001-008.md
+++ b/english/word/low-frequency/001-008.md
@@ -176,7 +176,7 @@
     - She dose everything with style and grace.
 - narrative
     - n. 叙事
-- mightily
+- mightily [ˈmaɪtli]
     - adv. 非常
     - He had given a **mightily** imoressive performance.
     - That framework has contributed **mightily** to our broken immigration system.
