--- a/english/word/low-frequency/017-024.md
+++ b/english/word/low-frequency/017-024.md
@@ -152,6 +152,8 @@
     - miserable 悲惨的
 - outrage
     - n. 愤怒
+    - ...provoked justified **outrage** in Vermont last week when it announced it was dishonoring a longstanding
+      commitment.
 
 ## 022
 
