review: Unit 21-2, Unit 18-2, Unit 17-2, Unit 14-1

--- a/english/word/low-frequency/001-008.md
+++ b/english/word/low-frequency/001-008.md
@@ -31,9 +31,11 @@
     - v. 使倾斜
 - uncrowded
     - adj. 不拥挤的
-- unsuprassed
+- unsurpassed
     - adj. 无比的，卓越的
-    - <ins>Rested in (坐落于)</ins> the Pacific Ocean，Mauna Kea's <ins>peak (山峰)</ins> <ins>rises above (上升)</ins> the bulk of our planet's dense atmosphere，where conditions allow telescopes to obtain images of unsurpassed clarity
+    - <ins>Rested in (坐落于)</ins> the Pacific Ocean, Mauna Kea's <ins>peak (山峰)</ins> <ins>rises above (上升)</ins>
+      the bulk of our planet's dense atmosphere，where conditions allow telescopes to obtain images of **unsurpassed**
+      clarity
 - elevation
     - n. 提升
     - elevator n. 电梯
@@ -149,7 +151,8 @@
     - adv. 顽固地
 - landmark
     - n. 里程碑
-    - In the landmark 1975 decision Taylor v. Louisiana，the Supreme Court extended the requirement that juries be representative of all parts of the community to the state level.
+    - In the landmark 1975 decision Taylor v. Louisiana，the Supreme Court extended the requirement that juries be
+      representative of all parts of the community to the state level.
         - extend A to B 延伸到
 - formative
     - adj. 对成长有深远影响的
