review: Unit 19-2, Unit 14-2, Unit 21-2, Unit 18-2

--- a/english/word/low-frequency/025-032.md
+++ b/english/word/low-frequency/025-032.md
@@ -31,7 +31,8 @@
     - implicit adj. 间接的，含糊的
         - == indirect
         - explicit adj. 直接的，清晰的
-        - You might think you and your boyfriend might have an implicit understanding that you are going to get married，but it's probably better to talk it through.
+        - You might think you and your boyfriend might have an implicit understanding that you are going to get
+          married，but it's probably better to talk it through.
 - reliability
     - n. 可靠性
     - unreliability n. 不可靠性
@@ -41,7 +42,7 @@
     - simple adj.简单的
 - interviewee
     - n. 参加面试者
-    - The question  was vague，giving the interviewee enough rope to hang herself. 这个问题模棱两可，让面试者胡乱发挥而自毙吧。
+    - The question was vague，giving the interviewee enough rope to hang herself. 这个问题模棱两可，让面试者胡乱发挥而自毙吧。
     - -ee 被动
         - employee 员工
     - -er 主动
@@ -125,7 +126,8 @@
     - vt. 阐明
     - == clarification
         - clarify v. 阐明
-    - Yet its report may well set back reform by obscuring the depth and breath of the challenge that Congress asked it to illuminate.
+    - Yet its report may well set back reform by obscuring the depth and breath of the challenge that Congress asked it
+      to illuminate.
 - uncontrolled
     - adj. 不受控制的
     - controllable adj. 可控制的
@@ -179,7 +181,10 @@
     - vt. 称赞
 - terror
     - n. 恐怖主义
-    - terrorist n. 恐怖主义者
+    - terrorist
+        - n. 恐怖主义者
+        - The crash of EgyptAir Flight 804, which **terrorists** may have downed over the Mediterranean Sea, provides
+          another *tragic([ˈtrædʒɪk] adj. 悲惨的)* reminder of why.
 
 ## 031
 
