--- a/english/word/low-frequency/041-048.md
+++ b/english/word/low-frequency/041-048.md
@@ -65,8 +65,10 @@
     - == doubtful
 - copyright
     - n. 版权
-- tragic
+- tragic [ˈtrædʒɪk]
     - adj. 悲惨的
+    - The crash of EgyptAir Flight 804, which terrorists may have downed over the Mediterranean Sea, provides another
+      **tragic** reminder of why.
     - tragedy n. 悲剧
     - comedy n. 喜剧
 - plug
