--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -16,7 +16,8 @@
     - adj. 立即的，即刻的；直接的；紧靠的
     - medi- 中间的
     - 立即的，马上的
-        - Because electronic payments(电子支付) are immediate，they eliminate([ɪˈlɪmɪneɪt] v.消除) the float for the consumer.
+        - Because electronic payments(电子支付) are immediate，they eliminate([ɪˈlɪmɪneɪt] v.消除) the float for the
+          consumer.
     - 直接的
         - Interest rates have an immediate effect on the economy([ɪˈkɑːnəmi] 经济).
 - sell
@@ -155,7 +156,9 @@
     - warmth n. 温暖
 - experiment  [ɪkˈsperɪmənt]
     - n. 实验; 试用
-    - experience [ɪkˈspɪriəns] n. 经验; 经历; 往事 v. 经历; 感受
+    - experience [ɪkˈspɪriəns]
+        - n. 经验; 经历; 往事
+        - v. 经历; 感受
 - agency
     - n. 代理机构；（政府）专门机构(CIA)
     - travel agency
@@ -222,7 +225,8 @@
 - catch
     - vt. 抓住；赶上；感染；吸引；领会，听清楚
     - 吸引
-        - What is graphically([ˈɡræfɪklɪ] 形象的) and explicitly([ɪk'splɪsɪtlɪ] 明确的) depicted in the simple yet eye-catching drawing is that...
+        - What is graphically([ˈɡræfɪklɪ] 形象的) and explicitly([ɪk'splɪsɪtlɪ] 明确的) depicted in the simple yet
+          eye-catching drawing is that...
           在简单而引人注目的图画中，以图形和明确的方式描绘的是
     - 赶上 catch up
         - while still <ins>catching up</ins> in some spheres([sfɪr]) of modern life... 在现代生活的某些领域仍在努力追赶
@@ -257,7 +261,8 @@
     - n. 其余的人或物
     - for the rest of us 对于我们其他的人
     - vi. 依靠 rest on/upon
-        - Good governance([ˈɡʌvərnəns] n. 统治; 管理; 支配;) <ins>rests on</ins> an understanding of... 良好的治理建立在对...的理解之上。
+        - Good governance([ˈɡʌvərnəns] n. 统治; 管理; 支配;) <ins>rests on</ins> an understanding of...
+          良好的治理建立在对...的理解之上。
 - introduce
     - v. 介绍；引进
     - The gardens of the homeless <ins>introduce from into</ins> an urban environment. 无家可归者的花园将人们引入城市环境
@@ -304,7 +309,7 @@
     - waitress n. 女服务员
     - actor, actress
 - conversation [ˌkɑːnvərˈseɪʃn]
-    - n. 交谈 
+    - n. 交谈
 - aspect [ˈæspekt]
     - n. 样貌；方面
     - First，scientific work(研究) <ins>tends to(往往)</ins> focus on some aspect of prevailing(盛行的) knowledge...
