feat: add Unit4-1 Unit14-1 Unit11-1 Unit7-1 Unit1-2 Unit4-2 Unit13-2 Unit5-1  057-064 PE-2

--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -211,6 +211,9 @@
 - plant
     - n. 工厂，植物: nuclear power plant 核电厂
     - vt. 种植: People may clear land to plant more rice.
+    - PE
+        - n. 工厂
+        - The conflict has been surfacing since 2002，when the corporation bought Vermont's only nuclear power plant,an aging reactor in Vernon.
 - reader
 - robot
 - drug [drʌɡ]
